--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+*{
+    margin: 0;
+}
+.box{
+    background-color: lightblue;
+    border: 2px solid black;
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    top: 45%;
+    left:45%;
+}
+p{
+    color: rgb(128,6,131);
+    font-weight: 600;
+    position: absolute;
+    top: 48%;
+    left: 30%;
+}
